Initial JDK 8 support.